fixing compatibility issues
